<resources>
    <string name="app_name">MomentCommerce</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_sepetim">Shopping Bag</string>
   <string name="total_item_count">Total Item Count</string>
    <string name="total_amount">Total Amount</string>
    <string name="checkout_button">Checkout Button</string>
    <string name="title_products">Products</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="close_btn">Close Button</string>
    <string name="complete_order">Your order has been placed successfully!</string>
    <string name="remove_product_from_bag">Remove From Bag</string>
    <string name="order_product">Order</string>
    <string name="empty_bag">Bag is Empty!</string>
</resources>