<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingBagFragment">

    <FrameLayout
        android:id="@+id/frameLayout37"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background2"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView127"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/title_sepetim"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout37"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey8"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/frameLayout42"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/tertiary_bordered_background"
                    android:padding="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView210"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/title_products"
                            android:textColor="@color/primary1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/sepetUrunRV"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView210" />

                        <FrameLayout
                            android:id="@+id/orderGeneralNote"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/white_2_background"
                            android:padding="16dp"
                            android:visibility="gone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/sepetUrunRV">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/textView211"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-medium"
                                    android:text="@string/title_aciklama_not"
                                    android:textColor="@color/black2"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <View
                                    android:id="@+id/view30"
                                    android:layout_width="0dp"
                                    android:layout_height="1dp"
                                    android:layout_marginTop="8dp"
                                    android:background="@color/tertiary5"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/textView211" />

                                <EditText
                                    android:id="@+id/editTextTextPersonName2"
                                    android:layout_width="0dp"
                                    android:layout_height="100dp"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/white_frame_layout_background"
                                    android:gravity="start|top"
                                    android:imeOptions="actionDone"
                                    android:inputType="textMultiLine"
                                    android:lines="5"
                                    android:maxLines="5"
                                    android:padding="8dp"
                                    android:scrollbars="vertical"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/view30" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </FrameLayout>
                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/tertiary_bordered_background"
                            android:padding="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/orderGeneralNote">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TableLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                    <TableRow
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">

                                        <TextView
                                            android:id="@+id/textView212"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:fontFamily="sans-serif-medium"
                                            android:text="@string/total_item_count"
                                            android:textColor="@color/tertiary2" />

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:orientation="horizontal">

                                            <TextView
                                                android:id="@+id/urunToplamFiyat"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginRight="3dp"
                                                android:fontFamily="sans-serif-medium"
                                                android:text="00.00"
                                                android:textColor="@color/black" />

                                            <TextView
                                                android:id="@+id/textView214"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:fontFamily="sans-serif-medium"
                                                android:text="₺"
                                                android:textColor="@color/black" />
                                        </LinearLayout>
                                    </TableRow>

                                    <TableRow
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginTop="5dp">

                                        <TextView
                                            android:id="@+id/textView218"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:fontFamily="sans-serif-medium"
                                            android:text="@string/total_amount"
                                            android:textColor="@color/black" />

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:orientation="horizontal">

                                            <TextView
                                                android:id="@+id/lastTotalProduct"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginRight="5dp"
                                                android:fontFamily="sans-serif-medium"
                                                android:text="00.00"
                                                android:textColor="@color/black" />

                                            <TextView
                                                android:id="@+id/textView220"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:fontFamily="sans-serif-medium"
                                                android:text="₺"
                                                android:textColor="@color/black" />
                                        </LinearLayout>
                                    </TableRow>
                                </TableLayout>
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </FrameLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>

                <Button
                    android:id="@+id/confirmBasket"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout42"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/confirm_bag_button_background"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/checkout_button"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
